--- a/client/evm-tracing/Cargo.toml
+++ b/client/evm-tracing/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "moonbeam-client-evm-tracing"
-authors = [ "PureStake" ]
+authors = ["PureStake"]
 edition = "2018"
 homepage = "https://moonbeam.network"
 license = "GPL-3.0-only"
@@ -11,8 +11,8 @@ version = "0.1.0"
 codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
 ethereum-types = { version = "0.12.0" }
 evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events" }
-hex = { version = "0.4", features = [ "serde" ] }
+hex = { version = "0.4", features = ["serde"] }
 moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
-serde = { version = "1.0", features = [ "derive" ] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
-sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+sp-std = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
