--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "moonbeam"
-authors = [ "PureStake" ]
+authors = ["PureStake"]
 description = "Moonbeam Collator"
 edition = "2018"
 homepage = "https://moonbeam.network"
@@ -12,7 +12,7 @@ name = 'moonbeam'
 path = 'src/main.rs'
 
 [dependencies]
-futures = { version = "0.3.1", features = [ "compat" ] }
+futures = { version = "0.3.1", features = ["compat"] }
 
 moonbeam-cli = { path = "cli", default-features = false }
 moonbeam-service = { path = "service", default-features = false }
@@ -21,26 +21,38 @@ moonbeam-service = { path = "service", default-features = false }
 assert_cmd = "0.12"
 hex = "0.4.3"
 nix = "0.17"
-serde = { version = "1.0.101", features = [ "derive" ] }
+serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3.2.0"
 
 # Benchmarking
-pallet-xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.12" }
-xcm-builder = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.12" }
+pallet-xcm = { git = "https://github.com/axia-tech/axia", branch = "dev" }
+xcm-builder = { git = "https://github.com/axia-tech/axia", branch = "dev" }
 
 [features]
-default = [ "moonbase-native", "moonbeam-native", "moonriver-native" ]
+default = ["moonbase-native", "moonbeam-native", "moonriver-native"]
 
-kusama-native = [ "moonbeam-service/kusama-native" ]
-rococo-native = [ "moonbeam-service/betanet-native" ]
-westend-native = [ "moonbeam-cli/westend-native", "moonbeam-service/westend-native" ]
+axiatest-native = ["moonbeam-service/axiatest-native"]
+betanet-native = ["moonbeam-service/betanet-native"]
+alphanet-native = [
+	"moonbeam-cli/alphanet-native",
+	"moonbeam-service/alphanet-native",
+]
 
-moonbase-native = [ "moonbeam-cli/moonbase-native", "moonbeam-service/moonbase-native" ]
-moonbeam-native = [ "moonbeam-cli/moonbeam-native", "moonbeam-service/moonbeam-native" ]
-moonriver-native = [ "moonbeam-cli/moonriver-native", "moonbeam-service/moonriver-native" ]
+moonbase-native = [
+	"moonbeam-cli/moonbase-native",
+	"moonbeam-service/moonbase-native",
+]
+moonbeam-native = [
+	"moonbeam-cli/moonbeam-native",
+	"moonbeam-service/moonbeam-native",
+]
+moonriver-native = [
+	"moonbeam-cli/moonriver-native",
+	"moonbeam-service/moonriver-native",
+]
 
-moonbase-native-tracing = [ "moonbeam-service/moonbase-native-tracing" ]
+moonbase-native-tracing = ["moonbeam-service/moonbase-native-tracing"]
 
 test-spec = []
 
