--- a/primitives/ext/Cargo.toml
+++ b/primitives/ext/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "moonbeam-primitives-ext"
-authors = [ "PureStake" ]
+authors = ["PureStake"]
 edition = "2018"
 homepage = "https://moonbeam.network"
 license = "GPL-3.0-only"
@@ -13,14 +13,14 @@ ethereum-types = { version = "0.12.0", default-features = false }
 # Moonbeam
 evm-tracing-events = { path = "../rpc/evm-tracing-events", default-features = false }
 
-# Substrate
+# AXIA-CORE
 codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
-sp-externalities = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-runtime-interface = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
+sp-externalities = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-runtime-interface = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-std = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
 
 [features]
-default = [ "std" ]
+default = ["std"]
 std = [
 	"codec/std",
 	"ethereum-types/std",
