--- a/primitives/rpc/evm-tracing-events/Cargo.toml
+++ b/primitives/rpc/evm-tracing-events/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "evm-tracing-events"
-authors = [ "PureStake" ]
+authors = ["PureStake"]
 edition = "2018"
 homepage = "https://moonbeam.network"
 license = "GPL-3.0-only"
@@ -14,14 +14,18 @@ environmental = { version = "1.1.2", default-features = false }
 codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
 
 # Ethereum
-ethereum = { version = "0.9.0", default-features = false, features = [ "with-codec" ] }
+ethereum = { version = "0.9.0", default-features = false, features = [
+	"with-codec",
+] }
 ethereum-types = { version = "0.12.0", default-features = false }
-evm = { version = "0.30.1", default-features = false, features = [ "with-codec" ] }
+evm = { version = "0.30.1", default-features = false, features = [
+	"with-codec",
+] }
 evm-gasometer = { version = "0.30.0", default-features = false }
 evm-runtime = { version = "0.30.0", default-features = false }
 
 [features]
-default = [ "std" ]
+default = ["std"]
 std = [
 	"codec/std",
 	"environmental/std",
@@ -31,4 +35,4 @@ std = [
 	"evm-runtime/std",
 	"evm/std",
 ]
-evm-tracing = [ "evm-gasometer/tracing", "evm-runtime/tracing", "evm/tracing" ]
+evm-tracing = ["evm-gasometer/tracing", "evm-runtime/tracing", "evm/tracing"]
