--- a/runtime/moonriver/Cargo.toml
+++ b/runtime/moonriver/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "moonriver-runtime"
-authors = [ "PureStake" ]
+authors = ["PureStake"]
 build = "build.rs"
 description = "Moonriver Runtime"
 edition = "2018"
@@ -11,7 +11,9 @@ version = "0.8.4"
 [dependencies]
 log = "0.4"
 rlp = { version = "0.5", optional = true, default-features = false }
-serde = { version = "1.0.101", optional = true, default-features = false, features = [ "derive" ] }
+serde = { version = "1.0.101", optional = true, default-features = false, features = [
+	"derive",
+] }
 sha3 = { version = "0.8", optional = true, default-features = false }
 
 # Moonbeam
@@ -40,36 +42,41 @@ moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug", default-f
 moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool", default-features = false }
 
 # Substrate
-frame-executive = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-frame-system-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-collective = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-democracy = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-identity = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-proxy = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-randomness-collective-flip = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-scheduler = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-society = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-treasury = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-pallet-utility = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-parity-scale-codec = { version = "2.2", default-features = false, features = [ "derive", "max-encoded-len" ] }
-scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
-sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-inherents = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-offchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-session = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
-sp-version = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
+frame-executive = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+frame-support = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+frame-system = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+frame-system-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-balances = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-collective = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-democracy = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-identity = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-proxy = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-randomness-collective-flip = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-scheduler = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-society = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-timestamp = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-transaction-payment = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-treasury = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+pallet-utility = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+axia-scale-codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", version = "2.3.1", default-features = false, features = [
+	"derive",
+	"max-encoded-len",
+] }
+scale-info = { version = "1.0", default-features = false, features = [
+	"derive",
+] }
+sp-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-block-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-core = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-inherents = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-io = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-offchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-session = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-std = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-transaction-pool = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
+sp-version = { git = "https://github.com/axia-tech/axia-core", branch = "dev", default-features = false }
 
 # Frontier
 fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
@@ -96,9 +103,9 @@ parachain-info = { git = "https://github.com/purestake/cumulus", branch = "moonb
 # AXIA / XCM
 
 # Benchmarking
-frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", optional = true, default-features = false }
-frame-system-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", optional = true, default-features = false }
-frame-try-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", optional = true, default-features = false }
+frame-benchmarking = { git = "https://github.com/axia-tech/axia-core", branch = "dev", optional = true, default-features = false }
+frame-system-benchmarking = { git = "https://github.com/axia-tech/axia-core", branch = "dev", optional = true, default-features = false }
+frame-try-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev", optional = true, default-features = false }
 
 [dev-dependencies]
 hex = "0.4"
@@ -109,10 +116,10 @@ cumulus-primitives-parachain-inherent = { git = "https://github.com/purestake/cu
 cumulus-test-relay-sproof-builder = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
 
 [build-dependencies]
-substrate-wasm-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
+substrate-wasm-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
 
 [features]
-default = [ "std" ]
+default = ["std"]
 std = [
 	"account/std",
 	"cumulus-pallet-parachain-system/std",
@@ -157,7 +164,7 @@ std = [
 	"parachain-info/std",
 	"allychain-staking-precompiles/std",
 	"allychain-staking/std",
-	"parity-scale-codec/std",
+	"axia-scale-codec/std",
 	"precompile-utils/std",
 	"runtime-common/std",
 	"scale-info/std",
@@ -174,7 +181,7 @@ std = [
 	"sp-transaction-pool/std",
 	"sp-version/std",
 ]
-evm-tracing = [ "evm-tracing-events", "moonbeam-evm-tracer", "rlp", "sha3" ]
+evm-tracing = ["evm-tracing-events", "moonbeam-evm-tracer", "rlp", "sha3"]
 
 # Will be enabled by the `wasm-builder` when building the runtime for WASM.
 runtime-wasm = []
@@ -182,7 +189,7 @@ runtime-wasm = []
 # A feature that should be enabled when the runtime should be build for on-chain
 # deployment. This will disable stuff that shouldn't be part of the on-chain wasm
 # to make it smaller like logging for example.
-on-chain-release-build = [ "sp-api/disable-logging" ]
+on-chain-release-build = ["sp-api/disable-logging"]
 
 runtime-benchmarks = [
 	"frame-benchmarking",
